<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.register.RegisterActivity">

    <EditText
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/text_hint_name"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:maxLength="40"
        android:maxLines="1"
        android:nextFocusDown="@id/tvSurname"
        android:textColor="@color/colorGrayBold"
        android:textColorHint="@color/colorGrayLigth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="300dp" />

    <EditText
        android:id="@+id/tvSurname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/text_hint_surname"
        android:imeOptions="actionNext"
        android:inputType="numberPassword"
        android:maxLength="40"
        android:maxLines="1"
        android:nextFocusDown="@id/tvAge"
        android:textColor="@color/colorGrayBold"
        android:textColorHint="@color/colorGrayLigth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:layout_constraintWidth_max="300dp" />

    <EditText
        android:id="@+id/tvAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/text_hint_age"
        android:imeOptions="actionNext"
        android:nextFocusDown="@id/tvBirthday"
        android:inputType="number"
        android:maxLength="3"
        android:maxLines="1"
        android:textColor="@color/colorGrayBold"
        android:textColorHint="@color/colorGrayLigth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSurname"
        app:layout_constraintWidth_max="300dp" />


    <EditText
        android:id="@+id/tvBirthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/text_hint_birthday"
        android:imeOptions="actionDone"
        android:inputType="date"
        android:maxLength="40"
        android:maxLines="1"
        android:textColor="@color/colorGrayBold"
        android:textColorHint="@color/colorGrayLigth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAge"
        app:layout_constraintWidth_max="300dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:enabled="false"
        android:text="@string/text_save_changes"
        android:theme="@style/AppTheme.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBirthday"
        app:layout_constraintWidth_max="300dp" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:background="@drawable/gradient_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>